# Embedded-Hacking

./: .gitattributes  0x0020_dynamic-conditionals.uf2  EHP2.fzz  README.md  openocd.ps1
0x0001_hello-world/: 0x0001_hello-world.c  CMakeLists.txt  main.c  platformio.ini  rom_disasm.txt
0x0001_hello-world/include/: usart.h
0x0001_hello-world/src/: main.c  usart.c
0x0005_intro-to-variables/: 0x0005_intro-to-variables.c  CMakeLists.txt  lwipopts_examples_common.h  main.c
0x0008_unitialized-variables/: 0x0008_unitialized-variables.c  CMakeLists.txt  main.c
0x0008_unitialized-variables-a/: 0x0008_unitialized-variables-a.c  CMakeLists.txt
0x0008_unitialized-variables-b/: 0x0008_unitialized-variables-b.c  CMakeLists.txt
0x0008_unitialized-variables-c/: 0x0008_unitialized-variables-c.c  CMakeLists.txt
0x0008_unitialized-variables-d/: 0x0008_unitialized-variables-d.c  CMakeLists.txt
0x0008_unitialized-variables-e/: 0x0008_unitialized-variables-e.c  CMakeLists.txt
0x000b_integer-data-type/: CMakeLists.txt  main.c
0x000e_floating-point-data-type/: CMakeLists.txt  main.c  mbedtls_config.h
0x0011_double-floating-point-data-type/: CMakeLists.txt  main.c
0x0014_static-variables/: CMakeLists.txt  lwipopts.h  main.c
0x0017_constants/: .gitignore  CMakeLists.txt  main.c
0x001a_operators/: CMakeLists.txt  main.c
0x001d_static-conditionals/: CMakeLists.txt  main.c
0x0020_dynamic-conditionals/: CMakeLists.txt  LICENSE  input.c  input.h  main.c
0x0023_functions-wo-params-wo-return/: CMakeLists.txt  main.c
